--- a/car_tinder/client/src/components/swipe/carcard/CarCard.css
+++ b/car_tinder/client/src/components/swipe/carcard/CarCard.css
@@ -2,7 +2,7 @@
   width: 350px;
   height: 500px;
   border-radius: 20px;
-  background: #ffffff;
+  background: black;
   padding: 20px;
   display: flex;
   flex-direction: column;
